--- a/src/aboutme.fxml
+++ b/src/aboutme.fxml
@@ -13,7 +13,7 @@
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../img/perfil.jpg" />
+                  <Image url="@/perfil.jpg" />
                </image>
                <effect>
                   <Reflection />
