--- a/src/fxgui.fxml
+++ b/src/fxgui.fxml
@@ -70,39 +70,39 @@
                      <children>
                         <Pane prefHeight="414.0" prefWidth="628.0">
                            <children>
-                              <TextField fx:id="fld_login_reg" layoutX="27.0" layoutY="14.0" />
-                              <TextField fx:id="fld_name_reg" layoutX="27.0" layoutY="54.0" />
-                              <PasswordField fx:id="fld_password_reg" layoutX="27.0" layoutY="94.0" />
-                              <PasswordField fx:id="fld_password2_reg" layoutX="27.0" layoutY="131.0" />
-                              <ComboBox fx:id="combo_sex_reg" layoutX="27.0" layoutY="170.0" prefWidth="150.0" promptText="Choose Gender" />
-                              <ComboBox fx:id="combo_college_reg" layoutX="26.0" layoutY="210.0" onAction="#handleDetectSelection" onMouseClicked="#handleCollegeRegComboClick" prefWidth="150.0" promptText="Choose College" />
-                              <TextField fx:id="fld_infnetmail_reg" disable="true" layoutX="28.0" layoutY="250.0" />
-                              <ComboBox fx:id="combo_course_reg" disable="true" layoutX="28.0" layoutY="289.0" onMouseClicked="#handleCourseRegComboClick" prefHeight="25.0" prefWidth="148.0" promptText="Choose Course" />
-                              <ComboBox fx:id="combo_courseStTr_reg" layoutX="27.0" layoutY="334.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Trimester" />
-                              <TextField fx:id="fld_othercol_reg" disable="true" layoutX="27.0" layoutY="374.0" />
-                              <TextField fx:id="fld_email_reg" layoutX="444.0" layoutY="14.0" />
-                              <TextField fx:id="fld_whatsapp_reg" layoutX="444.0" layoutY="54.0" />
-                              <TextField fx:id="fld_facebook_reg" layoutX="444.0" layoutY="94.0" />
-                              <ComboBox fx:id="combo_country_reg" layoutX="443.0" layoutY="131.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose Country" />
-                              <ComboBox fx:id="combo_state_reg" layoutX="443.0" layoutY="170.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose State" />
-                              <ComboBox fx:id="combo_city_reg" layoutX="443.0" layoutY="208.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose City" />
-                              <Label layoutX="197.0" layoutY="18.0" text="*Login" />
-                              <Label layoutX="194.0" layoutY="58.0" text="*Name (Screen name)" />
-                              <Label layoutX="197.0" layoutY="96.0" text="*Password" />
-                              <Label layoutX="193.0" layoutY="133.0" text="*Confirm Password" />
-                              <Label layoutX="194.0" layoutY="172.0" text="*Sex" />
-                              <Label layoutX="192.0" layoutY="212.0" text="*College" />
-                              <Label fx:id="lbl_addcol_reg" layoutX="194.0" layoutY="378.0" text="Other College" />
-                              <Label layoutX="194.0" layoutY="291.0" text="*Course" />
-                              <Label fx:id="lbl_infnetid_reg" layoutX="192.0" layoutY="254.0" text="Infnet email ID" />
-                              <Label fx:id="lbl_coursestart_reg" layoutX="193.0" layoutY="336.0" text="*Course Start Trimester" />
-                              <Label layoutX="395.0" layoutY="18.0" text="*Email" />
-                              <Label layoutX="347.0" layoutY="58.0" prefHeight="17.0" prefWidth="90.0" text="WhatsApp (+55)" />
-                              <Label layoutX="395.0" layoutY="98.0" text="fb.com/" />
-                              <Label layoutX="400.0" layoutY="174.0" text="*State" />
-                              <Label layoutX="403.0" layoutY="212.0" text="*City" />
-                              <Label layoutX="386.0" layoutY="135.0" text="*Country" />
+                              <TextField fx:id="fld_login_reg" layoutX="142.0" layoutY="11.0" />
+                              <TextField fx:id="fld_name_reg" layoutX="142.0" layoutY="51.0" />
+                              <PasswordField fx:id="fld_password_reg" layoutX="142.0" layoutY="91.0" />
+                              <PasswordField fx:id="fld_password2_reg" layoutX="142.0" layoutY="128.0" />
+                              <ComboBox fx:id="combo_sex_reg" layoutX="142.0" layoutY="167.0" prefWidth="150.0" promptText="Choose Gender" />
+                              <ComboBox fx:id="combo_college_reg" layoutX="141.0" layoutY="207.0" onAction="#handleDetectSelection" onMouseClicked="#handleCollegeRegComboClick" prefWidth="150.0" promptText="Choose College" />
+                              <TextField fx:id="fld_infnetmail_reg" disable="true" layoutX="143.0" layoutY="247.0" />
+                              <ComboBox fx:id="combo_course_reg" disable="true" layoutX="143.0" layoutY="286.0" onMouseClicked="#handleCourseRegComboClick" prefHeight="25.0" prefWidth="148.0" promptText="Choose Course" />
+                              <ComboBox fx:id="combo_courseStTr_reg" layoutX="142.0" layoutY="331.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Trimester" />
+                              <TextField fx:id="fld_othercol_reg" disable="true" layoutX="142.0" layoutY="371.0" />
+                              <TextField fx:id="fld_email_reg" layoutX="427.0" layoutY="11.0" />
+                              <TextField fx:id="fld_whatsapp_reg" layoutX="427.0" layoutY="51.0" />
+                              <TextField fx:id="fld_facebook_reg" layoutX="427.0" layoutY="91.0" />
+                              <ComboBox fx:id="combo_country_reg" layoutX="426.0" layoutY="128.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose Country" />
+                              <ComboBox fx:id="combo_state_reg" layoutX="426.0" layoutY="167.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose State" />
+                              <ComboBox fx:id="combo_city_reg" layoutX="426.0" layoutY="205.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose City" />
+                              <Label layoutX="386.0" layoutY="15.0" text="*Email" />
+                              <Label layoutX="338.0" layoutY="55.0" prefHeight="17.0" prefWidth="90.0" text="WhatsApp (+55)" />
+                              <Label layoutX="382.0" layoutY="95.0" text="fb.com/" />
+                              <Label layoutX="387.0" layoutY="171.0" text="*State" />
+                              <Label layoutX="390.0" layoutY="209.0" text="*City" />
+                              <Label layoutX="375.0" layoutY="132.0" text="*Country" />
                           <Button fx:id="btn_sv_opt" layoutX="518.0" layoutY="366.0" mnemonicParsing="false" onAction="#handleRegisterButton" prefHeight="25.0" prefWidth="94.0" text="Register" />
+                              <Label fx:id="lbl_coursestart_reg" layoutX="7.0" layoutY="335.0" text="*Course Start Trimester" />
+                              <Label fx:id="lbl_infnetid_reg" layoutX="53.0" layoutY="251.0" text="Infnet email ID" />
+                              <Label layoutX="88.0" layoutY="290.0" text="*Course" />
+                              <Label fx:id="lbl_addcol_reg" layoutX="55.0" layoutY="375.0" text="Other College" />
+                              <Label layoutX="87.0" layoutY="208.0" text="*College" />
+                              <Label layoutX="109.0" layoutY="170.0" text="*Sex" />
+                              <Label layoutX="32.0" layoutY="131.0" prefHeight="17.0" prefWidth="105.0" text="*Confirm Password" />
+                              <Label layoutX="82.0" layoutY="94.0" text="*Password" />
+                              <Label layoutX="18.0" layoutY="54.0" text="*Name (Screen name)" />
+                              <Label layoutX="103.0" layoutY="14.0" text="*Login" />
                            </children>
                         </Pane>
                      </children>
